<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C@re</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Register">Register</string>
    <string name="Info">Info</string>
    <string name="Home">Home</string>
    <string name="login">Login to C@re</string>
    <string name="userid">user id.........</string>
    <string name="password">password......</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>   
    <string name="EmployeeId">Employee Id....</string>
    <string name="EmployeeName">Employee Name....</string>
    <string name="EmailId">Email Id....</string>
    <string name="Mobile">Mobile Number....</string>
    <string name="AMobile">Alternate Mobile Number....</string>
    <string name="Address">Address....</string>
    <string name="Reset">Reset</string>
    <string name="success">Your registrattion is successful....</string>
    
    <string name="bloodGroup">Blood Group</string>
    
      <string-array name="bloodGroups">
        <item>O−</item>
        <item>O+</item>
        <item>A−</item>
        <item>A+</item>
        <item>B−</item>
        <item>B+</item>
        <item>AB−</item>
        <item>AB+</item>
    </string-array>

</resources>
