<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:paddingTop="8dip"
            android:text="@string/Register"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <TextView
            android:id="@+id/blank"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="" />

        <EditText
            android:id="@+id/EmployeeId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:inputType="number"
            android:hint="@string/EmployeeId">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/EmployeeName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" 
            android:hint="@string/EmployeeName"/>

        <EditText
            android:id="@+id/EmailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" 
            android:hint="@string/EmailId"/>

        <EditText
            android:id="@+id/Mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/Mobile" />

        <EditText
            android:id="@+id/AMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" 
            android:hint="@string/AMobile"/>

        <EditText
            android:id="@+id/Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPostalAddress"
            android:hint="@string/Address" />

        
	<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/Home"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Home" 
        android:onClick="home"
        />

    <Button
        android:id="@+id/Info"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Info" />

    <Button
        android:id="@+id/Register"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Register" 
        android:onClick="register"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Home"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="50dp"
        android:text="@string/Reset"
        android:onClick="reset" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentRight="true"
        android:text="@string/Register"
        android:onClick="register" />

    <Spinner
        android:id="@+id/bloodGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/bloodGroup"
        android:prompt="@string/bloodGroup" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView> 