<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/jellyfish">
<ScrollView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical" 
    android:layout_gravity="center">
    
		<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/success"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
  </ScrollView>
  
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    
     <Button
        android:id="@+id/Home"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/Home" 
        android:onClick="home"
        android:background="@android:drawable/ic_menu_call"
        />

    <Button
        android:id="@+id/Info"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/Info" 
        android:background="@android:drawable/ic_menu_info_details"
        />

    <Button
        android:id="@+id/Register"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Register" 
        android:onClick="register"
        android:background="@android:drawable/ic_dialog_alert"
        />

    

    </RelativeLayout>
    
</RelativeLayout>